Apply formatting model when rendering grid. Apply `className` to grid cells. Truncate. Move formatting model to `model`. Fix build.

--- a/packages/ui/lit-grid/src/dx-grid.pcss
+++ b/packages/ui/lit-grid/src/dx-grid.pcss
@@ -84,6 +84,9 @@ dx-grid {
     box-sizing: border-box;
     cursor: pointer;
     border: 1px solid transparent;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     &[inert] {
       visibility: hidden;
     }
